Add initial posts support
- api/config/constants.js
    - Change account to user and add log
- api/models/log.model.js
    - Remove ref from date as it was a previous error
    - Add refPath to entity (previously entityId), this allows us to populate this field with the right table
    - Change model name to use a constant
- api/models/post.model.js
    - Add model for posts, uses deleted flag as we won't actually delete data
- api/models/user.model.js
    - Change model name to use a constant
- api/routes/index.js
    - Add routes for post
- api/routes/post.route.js
    - Add route to fetch available posts using pagination
    - Add route to add a new post as the authenticated user
- api/services/log.service.js
    - Add populate when fetching all the logs so we retrieve the relevant information about the entity
    - Add log function to log a creation of a post
    - Change accountCreate log function name to createUser to be inline with the services
- api/services/post.service.js
    - Add post service to read posts and create a new post and log these actions
- api/services/user.service.js
    - Change usage of log service to be inline with changes made there
- docs/api.swagger.yaml
    - Add documentation for posts endpoints
